--- a/public/basmatiRiceTest/index.html
+++ b/public/basmatiRiceTest/index.html
@@ -131,7 +131,9 @@
           <li><input type="checkbox" /> If you have whatsapp family groupchats</li>
           <li><input type="checkbox" /> If your parent's send random articles from whatsapp</li>
           <li><input type="checkbox" /> If you have cried about getting a B on a test</li>
-          <li><input type="checkbox" /> If you have gotten an A and been asked where the other points went</li>
+          <li>
+            <input type="checkbox" /> If you have gotten an A and been asked where the other points went
+          </li>
           <li><input type="checkbox" /> If you have never gotten below an A</li>
           <li><input type="checkbox" /> If you have cried at the dinner table when learning math</li>
           <li><input type="checkbox" /> If you have a Toyota Sienna, Honda Odyssey, or Honda Pilot</li>
@@ -176,8 +178,8 @@
     <p>
       This test was created by
       <a href="https://www.tiktok.com/@sidmoments">@sidmoments on tiktok.</a> Feel free to DM me on
-      <a href="https://instagram.com/shift4id">Instagram</a> if you have any feedback or suggestions for future
-      projects. Thanks!
+      <a href="https://instagram.com/shift4id">Instagram</a> if you have any feedback or suggestions for
+      future projects. Thanks!
     </p>
     <p>You can find my other socials at <a href="https://sid.fyi">sid.fyi</a></p>
     <p>© Official Basmati Rice Test by Siddharth Adusumelli. Design from Rice Purity Test.</p>
