--- a/public/basmatiRiceTest/index.html
+++ b/public/basmatiRiceTest/index.html
@@ -67,7 +67,7 @@
     <p>
       <img
         alt="Official Basmati Rice Test"
-        src="./sidOfficial.png"
+        src="/basmatiRiceTest/sidOfficial.png"
         style="width: 90%; margin: auto; max-width: 600px"
       />
     </p>
